Polished for final release